# lingxin

./: .gitignore  README.md  pyproject.toml
config/: l10_left.example.yaml
data/: bottle_grip_results.csv
docs/plans/: 2026-06-22-l10-hand-python-environment.md
examples/: bottle_grip_collection.py  custom_l10_control.py  handshake_on_pressure.py  l10_camera_teleop.py  l10_finger_ripple.py  l10_snap_finger.py  l25_handshake_on_pressure.py
l10_hand_control/: __init__.py  __main__.py  async_pose_sender.py  cli.py  config.py  dashboard.py  errors.py  hand_tracking.py  l10_pose.py  l10_state.py  mediapipe_hands.py  sdk_backend.py  web_server.py
l10_hand_control/static/: app.js  index.html  style.css
scripts/: install_official_sdk.cmd  install_official_sdk.ps1  run_camera_teleop.ps1  run_web_ui.cmd  run_web_ui.ps1  setup_env.ps1
tests/: test_async_pose_sender.py  test_bottle_grip_collection.py  test_cli.py  test_config.py  test_custom_l10_control.py  test_dashboard.py  test_dashboard_errors.py  test_hand_tracking.py  test_handshake_on_pressure.py  test_l10_finger_ripple.py  test_l10_pose.py  test_l10_snap_finger.py  test_l10_state.py  test_l25_handshake_on_pressure.py  test_mediapipe_hands.py  test_sdk_backend.py  test_web_server.py
